[package]
name = "obfsct"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ignore = "0.4"
log = "0.4"
toml = "0.8"
uuid = { version = "1.8", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }